--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
     <!-- CSS -->
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -55,5 +56,21 @@
         </ul>
       </div>
     </nav>
+    <h1>About Me</h1>
+    <img
+      src="./assets/pictures/aboutmeimg.jpg"
+      alt="stephimg"
+      width="600"
+      height="500"
+    />
+
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
+      voluptate vero nesciunt eaque magnam necessitatibus architecto fugiat
+      consectetur repudiandae facere laudantium inventore dolorum pariatur error
+      natus ducimus soluta incidunt iste, cumque unde vitae quis id, eos
+      perferendis. Unde corrupti, iusto commodi tenetur accusamus alias maxime
+      doloremque, quos rem itaque eligendi?
+    </p>
   </body>
 </html>
