added h1 tags, added grid to portfolio, added css formatting background color and text color

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
       consectetur repudiandae facere laudantium inventore dolorum pariatur error
       natus ducimus soluta incidunt iste, cumque unde vitae quis id, eos
       perferendis. Unde corrupti, iusto commodi tenetur accusamus alias maxime
-      doloremque, quos rem itaque eligendi?
+      doloremque, quos rem itaque eligendi? Lorem ipsum, dolor sit amet
+      consectetur adipisicing elit. Libero voluptates quaerat perferendis
+      distinctio illo dolore quis quasi voluptatem molestias quisquam. Fugiat
+      nostrum aliquam necessitatibus sequi, quidem dolorum recusandae inventore
+      maxime.
     </p>
   </body>
 </html>
