--- a/contact.html
+++ b/contact.html
@@ -45,21 +45,23 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Contact </a>
+            <a class="nav-link" href="contact.html">Contact </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="index.html">About</a>
           </li>
         </ul>
       </div>
     </nav>
+    <div class="container">
     <h1>Contact</h1>
     <form>
-        
+
     </form>
+    </div>
   </body>
 </html>
