--- a/index.html
+++ b/index.html
@@ -44,27 +44,28 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Contact </a>
+            <a class="nav-link" href="contact.html">Contact </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="index.html">About</a>
           </li>
         </ul>
       </div>
     </nav>
+    <div class="container">
     <h1>About Me</h1>
     <img
       src="./assets/pictures/aboutmeimg.jpg"
       alt="stephimg"
-      width="600"
-      height="500"
+      width="400"
+      height="300"
     />
 
-    <p>
+    <span>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
       voluptate vero nesciunt eaque magnam necessitatibus architecto fugiat
       consectetur repudiandae facere laudantium inventore dolorum pariatur error
@@ -75,6 +76,7 @@
       distinctio illo dolore quis quasi voluptatem molestias quisquam. Fugiat
       nostrum aliquam necessitatibus sequi, quidem dolorum recusandae inventore
       maxime.
-    </p>
+    </span>
+</div>
   </body>
 </html>
