--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <!-- CSS -->
-    
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -44,32 +44,52 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Contact </a>
+            <a class="nav-link" href="contact.html">Contact </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="index.html">About</a>
           </li>
         </ul>
       </div>
     </nav>
-    <h1>Portfolio</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium iure dolores commodi. Dolores, voluptatibus consectetur praesentium ut voluptate non nostrum placeat, explicabo tempora cumque ea, numquam eos. In laboriosam nulla, officia doloribus molestias cum, eligendi dolores, aspernatur debitis cupiditate ducimus sapiente provident doloremque facilis sed exercitationem recusandae accusantium eveniet sequi!</div>
-            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, totam voluptates odit perferendis ex est perspiciatis. Recusandae sed autem sapiente commodi facilis quos animi fugiat quisquam. Maxime iusto vero blanditiis eius, a doloribus numquam omnis iure quas. Molestiae quae sapiente atque illo, nobis labore, hic commodi et reiciendis facilis accusantium!</div>
+    <div class="container p-3">
+      <h1>Portfolio</h1>
+
+      <div class="row align-items-center">
+        <div class="col p-3">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/30>" />
+          </a>
         </div>
-        <div class="row">
-            <div class="col">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur itaque quia repellendus possimus facilis enim repellat nulla. Quibusdam, eius eaque minus explicabo voluptatem placeat repellat praesentium quam aliquid fugit atque architecto asperiores provident deserunt quis animi necessitatibus. Eveniet exercitationem error a inventore dolorem, dolore dolorum impedit veniam laborum ex quis!</div>
-            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam vitae tempore facere, libero quisquam exercitationem doloremque illo laudantium voluptates, officia excepturi dignissimos maiores animi. Voluptatibus labore eos ullam facere expedita nemo ab nam quaerat placeat odit modi, molestiae omnis officia laboriosam laborum, ipsum beatae quod impedit sed laudantium itaque unde?</div>
+        <div class="col p-3">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/30>" />
+          </a>
         </div>
-        <div class="row">
-            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus rerum, provident debitis voluptatibus doloremque porro aliquid harum facere dolore est omnis, commodi quidem nostrum aliquam quaerat optio sunt. Mollitia aliquid voluptatum et sunt ea harum! Soluta porro recusandae commodi minima sint accusantium rem dolor, velit ut dolorum harum obcaecati sequi.</div>
-           
+      </div>
+      <div class="row align-items-center">
+        <div class="col p-3">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/30>" />
+          </a>
         </div>
+        <div class="col">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/30>" />
+          </a>
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col p-3">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/30>" /> </a
+          >.
+        </div>
+      </div>
     </div>
   </body>
 </html>
