--- a/portfolio.html
+++ b/portfolio.html
@@ -43,10 +43,10 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item ">
             <a class="nav-link" href="contact.html">Contact </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
 
@@ -56,10 +56,10 @@
         </ul>
       </div>
     </nav>
-    <div class="container p-3">
+    <div class="container ">
       <h1>Portfolio</h1>
 
-      <div class="row align-items-center">
+      <div class="row">
         <div class="col p-3">
           <a href="https://placeholder.com"
             ><img src="https://via.placeholder.com/30>" />
@@ -71,19 +71,19 @@
           </a>
         </div>
       </div>
-      <div class="row align-items-center">
+      <div class="row">
         <div class="col p-3">
           <a href="https://placeholder.com"
             ><img src="https://via.placeholder.com/30>" />
           </a>
         </div>
-        <div class="col">
+        <div class="col p-3">
           <a href="https://placeholder.com"
             ><img src="https://via.placeholder.com/30>" />
           </a>
         </div>
       </div>
-      <div class="row align-items-center">
+      <div class="row">
         <div class="col p-3">
           <a href="https://placeholder.com"
             ><img src="https://via.placeholder.com/30>" /> </a
