added bio to index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item ">
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact </a>
           </li>
           <li class="nav-item">
@@ -57,26 +57,30 @@
       </div>
     </nav>
     <div class="container">
-    <h1>About Me</h1>
-    <img
-      src="./assets/pictures/aboutmeimg.jpg"
-      alt="stephimg"
-      width="400"
-      height="300"
-    />
+      <h1>About Me</h1>
+      <div class="row">
+        <div class="col">
+          <img
+            src="./assets/pictures/aboutmeimg.jpg"
+            alt="stephimg"
+            width="400"
+            height="300"
+          />
+        </div>
 
-    <span>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
-      voluptate vero nesciunt eaque magnam necessitatibus architecto fugiat
-      consectetur repudiandae facere laudantium inventore dolorum pariatur error
-      natus ducimus soluta incidunt iste, cumque unde vitae quis id, eos
-      perferendis. Unde corrupti, iusto commodi tenetur accusamus alias maxime
-      doloremque, quos rem itaque eligendi? Lorem ipsum, dolor sit amet
-      consectetur adipisicing elit. Libero voluptates quaerat perferendis
-      distinctio illo dolore quis quasi voluptatem molestias quisquam. Fugiat
-      nostrum aliquam necessitatibus sequi, quidem dolorum recusandae inventore
-      maxime.
-    </span>
-</div>
+        <div class="col">
+          <span>
+            Hello! My name is Stephanie Dominguez. A little background on me is that my experience comes from 7
+            years of customer service. Only recently in 2020 I have begun to
+            delve into technology and coding. I have a Google Infortmation
+            Technology certificate from the popular search engine's professional
+            course that is hosted by Coursera. So due to what I learned on
+            computers themselves and what is happening in the world. I decided
+            to make the career change myself to devote my time this year to
+            learn how to code in Full Stack Development. Wish me luck!
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
